// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders OutlinedButton 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgba(0, 122, 255, 255)",
        "borderRadius": 5,
        "borderWidth": 1,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 64,
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "red",
        "color": "white",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.32,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "rgba(0, 122, 255, 255)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    New
  </Text>
</View>
`;

exports[`renders disabled OutlinedButton 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgba(0, 122, 255, 255)",
        "borderRadius": 5,
        "borderWidth": 1,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 64,
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "red",
        "color": "white",
      },
      Object {
        "borderColor": "rgba(199, 199, 204, 255)",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.32,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "rgba(199, 199, 204, 255)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    New
  </Text>
</View>
`;
